manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: test111
  labels:
    app: test111
  annotations:
    backstage.io/kubernetes-id: test111
spec:
  type: ClusterIP
  selector:
    app: test111
  ports:
    - port: 8080
      protocol: TCP
      name: http
